# Yaiba

./: Base.hs  INSTALL  Ideal.hs  LICENSE  Monomial.hs  Polynomial.hs  README  TODO  genColor.sh  index.html  yaiba.cabal  yaiba.cabal~
M2MakeTest/: M2MakeTest.m2
Test/: .gitignore  0.sh  1.sh  8.sh  Bench.hs  MonSpeedo.hs  PolySpeed.hs  Test  Test.hi  Test.hs  Test.hs~  Test.m2  Verify.hs  bench.sh  llvm.sh  prof.sh  verify.sh  yaibaTest.m2
Yaiba/: #Buchberger.hs#  Base.hs  Buchberger.hs  Buchberger.hs~  Buchberger2.hs  Cluster.hs  Ideal.hs  IdealMap.hs  IdealMap.hs~  Map.hs  Monomial.hs  OldBuchberger.hs  OldIdeal.hs  Polynomial.hs  Polynomial.hs~  PolynomialList.hs  PolynomialMap.hs  SPoly.hs  SPoly2.hs  Sugar.hs  Sugar.hs~
doc/: Yaiba-Buchberger.html  Yaiba-Ideal.html  Yaiba-Monomial.html  Yaiba-Polynomial.html  Yaiba-SPoly.html  Yaiba-Sugar.html  doc-index.html  index-frames.html  index.html  mini_Yaiba-Buchberger.html  mini_Yaiba-Ideal.html  mini_Yaiba-Monomial.html  mini_Yaiba-Polynomial.html  mini_Yaiba-SPoly.html  mini_Yaiba-Sugar.html
euler/: sumEuler.hs
