Name:                Yaiba
Version:             0.0.1.0
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Ong
Maintainer:          Jeremy Ong <jco34@cornell.edu>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           alpha
Category:            Math
Homepage:            http://github.com/jeremyong/Yaiba
Bug-reports:         http://github.com/jeremyong/Yaiba/issues
Description:
        Implementation of Buchberger's algorithm

Synopsis:
        Implementation of Buchberger's algorithms

Tested-with: GHC == 6.12.3, GHC == 6.12.2

Library
  Build-Depends:
        base                 == 4.*,
        dph-base             == 0.4.*,
        HaskellForMaths      == 0.1.*,
        containers           == 0.3.*,
        dph-par              == 0.4.*,
        parallel             == 2.2.0.*

  ghc-options:
        -Odph -Wall -fno-warn-missing-signatures -fglasgow-exts -XPArr -fdph-par

  extensions:
        UndecidableInstances

  Exposed-modules:
        Yaiba.Monomial
        Yaiba.Polynomial
        Yaiba.Ideal
        Yaiba.Sugar
        Yaiba.Buchberger
	Yaiba.SPoly