Name:                Yaiba
Version:             0.2.2
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Ong
Maintainer:          Jeremy Ong <jco34@cornell.edu>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           alpha
Category:            Math
Homepage:            http://github.com/jeremyong/Yaiba
Bug-reports:         http://github.com/jeremyong/Yaiba/issues
Description:
        Implementation of Buchberger's algorithm

Synopsis:
        Implementation of Buchberger's algorithms

Tested-with: GHC == 6.12.3, GHC == 6.12.2

Library
  Build-Depends:
        vector               == 0.6.*,
        base                 == 4.*,
        dph-base             == 0.4.*,
        containers           == 0.3.0.*,
        dph-par              == 0.4.*,
        parallel             == 2.2.0.*,
        deepseq              == 1.1.0.*,
        array                == 0.3.0.*

  ghc-options:
        -Odph -Wall -fno-warn-missing-signatures -fglasgow-exts -fdph-par -fno-warn-orphans

  extensions:
        UndecidableInstances
        DeriveDataTypeable
        CPP
        MagicHash
        Rank2Types

  Exposed-modules:
        Yaiba.Map
        Yaiba.Monomial
        Yaiba.Polynomial
        Yaiba.Ideal
        Yaiba.Sugar
        Yaiba.Cluster
        Yaiba.Buchberger
        Yaiba.SPoly
        Yaiba.Base

  include-dirs:
        include